# ImageFeatureViewer

./: CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  run.sh
include/: chip.h  editor_plugin_interface.h  image.h  image_op.h  mainwindow.h  rgb_extraction_plugin.h  util.h  view.h
src/: chip.cc  image.cc  image_op.cc  main.cc  mainwindow.cc  rgb_extraction_plugin.cc  util.cc  view.cc
